# SerialCommCpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SerialCommunication.slnx
SerialCommunication/: CommandProcessing.cpp  CommandProcessing.h  SerialCommunication.cpp  SerialCommunication.vcxproj  SerialCommunication.vcxproj.filters  SerialPort.cpp  SerialPort.h  SettingsReader.cpp  SettingsReader.h
